<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">かけぬけろ!みーちゃん</string>
    <string name="title_activity_main">RunAction</string>
    <string name="button_start">START</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="button_volume">BGM:ON</string>
    <string name="button_voleme_off">BGM:OFF</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_name">走って跳んでゴールに行き着くゲーム(仮)</string>
    <string name="stage_select">STAGE SELECT</string>
    <string name="goal_string1">Congratulations!</string>
    <string name="goal_string2">You CLEARED!</string>
    <string name="to_title">TITLE</string>
    <string name="stage_01">STAGE 1</string>
    <string name="stage_02">STAGE 2</string>
    <string name="stage_03">STAGE 3</string>
    <string name="back">BACK</string>

</resources>
